<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.kcr.common.widget.multiwaveheader.MultiWaveHeader
        android:id="@+id/waves"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:tag="
        70,25,1.4,1.4,-26
        100,5,1.4,1.2,15
        420,0,1.15,1,-10
        520,10,1.7,1.5,20
        220,0,1,1,-15
        "
        app:mwhAlphaColor="0.45"
        app:mwhCloseColor="#31AFFE"
        app:mwhStartColor="@color/colorPrimary" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@id/waves"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-85dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_logo" />


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/waves"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="45dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@mipmap/ic_login_account"
        android:drawablePadding="15dp"
        android:drawableStart="@mipmap/ic_login_account"
        android:hint="@string/login_username"
        android:inputType="textPersonName"
        android:padding="3dp"
        android:textColor="@color/colorTextContent"
        android:textSize="14sp"
        tools:text="13828416860" />

    <View
        style="@style/AppTheme.Divison"
        android:layout_below="@+id/username"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="2dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@id/username"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:background="@color/transparent"
        android:drawableLeft="@mipmap/ic_login_password"
        android:drawablePadding="15dp"
        android:drawableStart="@mipmap/ic_login_password"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:padding="3dp"
        android:textColor="@color/colorTextContent"
        android:textSize="@dimen/textsize_content" />

    <View
        style="@style/AppTheme.Divison"
        android:layout_below="@+id/password"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="2dp" />

    <ImageView
        android:id="@+id/delete"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/username"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/app_name"
        android:padding="10dp"
        android:src="@mipmap/ic_login_delete"
        android:visibility="invisible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:text="@string/login_forget"
        android:textColor="@color/colorTextAssistant" />

    <TextView

        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/primary_button"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login_login"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_titlesmall"
        tools:enabled="true" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="359dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tourist_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/ic_login_tourist"
            android:gravity="center_horizontal"
            android:text="@string/login_tourist_mode"
            android:textColor="@color/colorTextAssistant" />

        <View
            style="@style/AppTheme.Divison.Vertical"
            android:layout_height="30dp"
            android:layout_marginBottom="12dp" />

        <TextView
            android:id="@+id/verify_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/ic_login_phone"
            android:gravity="center_horizontal"
            android:text="@string/login_verify_mode"
            android:textColor="@color/colorTextAssistant" />
    </LinearLayout>

</RelativeLayout>
